Fixed z-index of close button

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -494,6 +494,7 @@ body {
         position: absolute;
         top: 0;
         right: 0;
+        z-index: 1;
       }
 
       ul {
